@@ -1,3 +1,7 @@
+2008-02-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/gen/lib/date.py (Date.__sub__): fixed some date math (#1649)
+	* src/gen/lib/test/date_test.py: added some unit tests for date math
+
 2008-02-15 Gary Burton <gary.burton@zen.co.uk>
 	* src/DataViews/RelationView.py:
 	* src/Editors/_EditFamily.py: prevent right mouse button causing crash.
